tests/__snapshots__/directive-fixme-stderr.snap.txt
Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

   5 | 
   6 | expect<string>().type.toBe<string>();
   7 | // @tstyche fixme -- Consider removing the directive
     | ~~~~~~~~~~~~~~~~~
   8 | expect<string>().type.toBe<string>();
   9 | 
  10 | // @tstyche fixme -- This should work, see: #265

       at ./__typetests__/directive-fixme.tst.ts:7:1

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  17 | // @tstyche fixme
  18 | test("is fixme?", () => {
  19 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  20 |   expect<number>().type.toBe<number>();
  21 | 
  22 |   expect<never>().type.toBe<number>(); // silenced fail

       at ./__typetests__/directive-fixme.tst.ts:19:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  26 | // @tstyche fixme -- Consider removing the directive
  27 | test("is number?", () => {
  28 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  29 |   expect<number>().type.toBe<number>();
  30 | 
  31 |   // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:28:3

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  24 | });
  25 | 
  26 | // @tstyche fixme -- Consider removing the directive
     | ~~~~~~~~~~~~~~~~~
  27 | test("is number?", () => {
  28 |   // @tstyche fixme -- Consider removing the directive
  29 |   expect<number>().type.toBe<number>();

       at ./__typetests__/directive-fixme.tst.ts:26:1

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  35 | 
  36 | test("is number?", () => {
  37 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  38 |   expect<number>().type.toBe<number>();
  39 | 
  40 |   // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:37:3

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  49 |   });
  50 | 
  51 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  52 |   test("is number?", () => {
  53 |     expect<number>().type.toBe<number>();
  54 |   });

       at ./__typetests__/directive-fixme.tst.ts:51:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  85 |   test("is number?", () => {
  86 |     expect<number>().type.toBe<number>();
  87 |     // @tstyche fixme -- Consider removing the directive
     |     ~~~~~~~~~~~~~~~~~
  88 |     expect<number>().type.toBe<number>();
  89 |   });
  90 | });

       at ./__typetests__/directive-fixme.tst.ts:87:5

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  82 |   });
  83 | 
  84 |   // @tstyche fixme -- Consider removing the directive
     |   ~~~~~~~~~~~~~~~~~
  85 |   test("is number?", () => {
  86 |     expect<number>().type.toBe<number>();
  87 |     // @tstyche fixme -- Consider removing the directive

       at ./__typetests__/directive-fixme.tst.ts:84:3

Error: The 'describe()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  70 | });
  71 | 
  72 | // @tstyche fixme -- Consider removing the directive
     | ~~~~~~~~~~~~~~~~~
  73 | describe("is describe?", () => {
  74 |   test("is number?", () => {
  75 |     expect<number>().type.toBe<number>();

       at ./__typetests__/directive-fixme.tst.ts:72:1

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  92 | describe("is describe?", () => {
  93 |   test("is number?", () => {
  94 |     // @tstyche fixme -- Consider removing the directive
     |     ~~~~~~~~~~~~~~~~~
  95 |     expect<number>().type.toBe<number>();
  96 | 
  97 |     // @tstyche fixme

       at ./__typetests__/directive-fixme.tst.ts:94:5

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  103 |   test("is number?", () => {
  104 |     expect<number>().type.toBe<number>();
  105 |     // @tstyche fixme -- Consider removing the directive
      |     ~~~~~~~~~~~~~~~~~
  106 |     expect<number>().type.toBe<number>();
  107 |   });
  108 | 

        at ./__typetests__/directive-fixme.tst.ts:105:5

Error: The 'test()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  100 |   });
  101 | 
  102 |   // @tstyche fixme -- Consider removing the directive
      |   ~~~~~~~~~~~~~~~~~
  103 |   test("is number?", () => {
  104 |     expect<number>().type.toBe<number>();
  105 |     // @tstyche fixme -- Consider removing the directive

        at ./__typetests__/directive-fixme.tst.ts:102:3

Error: The 'expect()' was supposed to fail, but it passed.

Consider removing the '// @tstyche fixme' directive.

  109 |   // @tstyche fixme
  110 |   test("is fixme?", () => {
  111 |     // @tstyche fixme -- Consider removing the directive
      |     ~~~~~~~~~~~~~~~~~
  112 |     expect<number>().type.toBe<number>();
  113 | 
  114 |     // @tstyche fixme

        at ./__typetests__/directive-fixme.tst.ts:111:5

